# PythonStockCalculator

./: .gitignore  .yapfignore  README.md  StockCalulator.py  requirements.txt  setup.cfg  setup.py
 docs/app/: app.html
 docs/app/controller/: analysis_controller.html  calendar_controller.html  graph_controller.html  index.html  loading_controller.html  main_controller.html  profit_controller.html  stock_controller.html
 docs/app/lib/: constants.html  index.html  stock_worker.html
 docs/app/model/: index.html  stock_node.html  stock_source_file.html
 docs/app/view/: layouts.html
 docs/app/view/components/: amount.html  analysis.html  calendar.html  graph.html  labels.html  profit.html  value_data.html
app/: app.py
app/controller/: README.md  amount_controller.py  analysis_controller.py  base_controller.py  calendar_controller.py  graph_controller.py  loading_controller.py  main_controller.py  profit_controller.py  stock_controller.py
app/lib/: README.md  constants.py  stock_worker.py
app/model/: README.md  stock.py  stock_node.py  stock_source.py  stock_source_file.py
app/view/: README.md  layouts.py
app/view/components/: amount.py  analysis.py  calendar.py  graph.py  labels.py  loading.py  profit.py  stock.py  value_data.py
docs/app/: app.html  index.html
docs/app/controller/: amount_controller.html  graph_controller.html  main_controller.html
docs/app/model/: stock.html  stock_node.html  stock_source.html
docs/app/view/: index.html  layouts.html
docs/app/view/components/: analysis.html  graph.html  index.html  labels.html  loading.html  (+3 more)
