[metadata]
name = Currency Converter
version = 1.0.0
author = Matthew Barber
author-email = mfmbarber@gmail.com
home-page = https://github.com/mattamorphic/python-stock-profit-calculator
description = A Currency Converter
long-description = file: README.md
license = MIT
license-file = LICENSE.md
platform = any
keywords = gui, converter, currency, money

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7, !=2.*
packages = {name}
test_suite = tests
setup_requires =
    setuptools
install_requires =
	{install_requires}
tests_require =
    {tests_require}

[options.extras_require]
dev =
	docutils
	Pygments
test =
	green
	coverage
ci =
    # codacy-coverage
    # codecov

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, venv/
